# SensorStreamKit

./: .gdbinit  .gitignore  .lldbinit  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEBUGGING.md  README.md  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: DEBUGGING.md  Dockerfile.dev  SECURITY_SCAN.md  docker-compose.yml
examples/: CMakeLists.txt
examples/01_simple_publisher/: main.cpp
examples/02_simple_subscriber/: main.cpp
examples/03_broker/: main.cpp
examples/04_rest_api/: main.cpp
examples/05_integrated_system/: main.cpp
examples/06_closed_loop_control/: main.cpp
include/sensorstreamkit/api/: rest_server.hpp
include/sensorstreamkit/core/: message.hpp
include/sensorstreamkit/sensors/: camera_sensor.hpp  imu_sensor.hpp  lidar_sensor.hpp  sensor_base.hpp  sensor_manager.hpp
include/sensorstreamkit/transport/: zmq_publisher.hpp  zmq_subscriber.hpp  zmq_transport.hpp
src/sensorstreamkit/api/: rest_server.cpp
src/sensorstreamkit/core/: message.cpp
src/sensorstreamkit/transport/: zmq_publisher.cpp  zmq_subscriber.cpp  zmq_transport.cpp
tests/: CMakeLists.txt  README_TEST_COVERAGE.md  integration_test.py  test_message_class.cpp  test_rest_api.cpp  test_sensor_system.cpp  test_sequence_counter.cpp  test_zmq_transport.cpp
